--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "vcm-cli",
+  "name": "git-check-merged",
   "version": "1.0.4",
-  "description": "Verify Commit Message",
+  "description": "git check merge master",
   "main": "src/index.js",
   "scripts": {
-    "vcm": "node bin/vcm.js",
+    "checkMerged": "node bin/checkMerged.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "vcm": "bin/vcm.js"
+    "checkMerged": "bin/checkMerged.js"
   },
   "dependencies": {
     "chalk": "^2.4.2",
