--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "git-check-merged",
-  "version": "1.0.4",
+  "version": "0.0.1",
   "description": "git check merge master",
   "main": "src/index.js",
   "scripts": {
-    "checkMerged": "node bin/checkMerged.js",
+    "checkIsMerge": "node bin/checkIsMerge.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "checkMerged": "bin/checkMerged.js"
+    "checkIsMerge": "bin/checkIsMerge.js"
   },
   "dependencies": {
     "chalk": "^2.4.2",
