--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "git-check-merged",
-  "version": "0.0.1",
+  "name": "git-check-merge",
+  "version": "0.0.2",
   "description": "git check merge master",
   "main": "src/index.js",
   "scripts": {
